Button alignment CSS fix

--- a/src/comman.css
+++ b/src/comman.css
@@ -18,3 +18,8 @@
 .card {
   min-height: 60vh;
 }
+
+.middle-btn {
+  width: 100%;
+  margin: auto;
+}
